--- a/diploma1/.classpath
+++ b/diploma1/.classpath
@@ -8,10 +8,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/apache-tomcat-7.0.27/lib/mysql-connector-java-5.1.36.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Сымбат/Desktop/диплом/pdfbox-app-2.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Сымбат/Desktop/диплом/poi-3.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Сымбат/Desktop/диплом/poi-ooxml-3.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Omarbek/git/kazakh/kazakh/diploma1/WebContent/WEB-INF/lib/mysql-connector-java-5.1.36.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Omarbek/git/kazakh/kazakh/diploma1/WebContent/WEB-INF/lib/pdfbox-app-2.0.0-RC1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Omarbek/git/kazakh/kazakh/diploma1/WebContent/WEB-INF/lib/poi-3.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Omarbek/git/kazakh/kazakh/diploma1/WebContent/WEB-INF/lib/poi-ooxml-3.11.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
